2009-02-19  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-banner.c:
	Update the maximum width of timed banners.
	(force_to_wrap_truncated): Enforce the maximum text width if the
	label is wrapped.

	Fixes: NB#102413 (The text margins (wrapping) in information
	banner should be HILDON_MARGIN_TRIPLE)

2009-02-19  Claudio Saavedra  <csaavedra@igalia.com>

	Patch by Gabriel Schulhof (gabriel.schulhof@nokia.com)

	* src/hildon-pannable-area.c (hildon_pannable_draw_vscroll),
	(hildon_pannable_draw_hscroll): Consider the adjustment's lower
	bound when calculating the scroll indicator position.

	Fixes: NB#102338 (HildonPannableArea scrolling indicator does not
	treat ->lower correctly)

2009-02-19  Claudio Saavedra  <csaavedra@igalia.com>

        * src/hildon-caption.c (hildon_caption_class_init): Remove the
        expose event handling, since it is not necessary to draw the focus
        anymore.

        Fixes: NB#102467 (Do not show highlight on the text in
        HildonCaption)

2009-02-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-edit-toolbar.c (hildon_edit_toolbar_init): Use the
	full height of the toolbar for the button and the label.

2009-02-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-edit-toolbar.c (hildon_edit_toolbar_init): Add some
	padding before the label and after the button.

2009-02-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-window.c (paint_edit_toolbar): Fix style detail.

	* src/hildon-edit-toolbar.c (hildon_edit_toolbar_init):
	Add a GtkVSeparator between the button and the back arrow.
	Let the button have automatic size.
	Set a name to the widget for theming handling.

	Fixes: NB#101793 (Make edit toolbar the same height as window
	title bar (use title area theming))

2009-02-18  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-helper.c (attach_new_color_element): Fix memory
	leak.

	Fixes: NB#102262 (memory leak in hildon_button_set_style())

2009-02-18  Alberto Garcia  <agarcia@igalia.com>
